--- a/vite-portfolio/src/Card/Card.module.css
+++ b/vite-portfolio/src/Card/Card.module.css
@@ -9,21 +9,21 @@
     display: inline-block
   }
   
-.card-image{
-    max-width: 60%;
+.card img{
+    max-width: 25%;
     height: auto;
     border-radius: 50%;
     margin-bottom: 10px;
     cursor: pointer;
 }
 
-.card .card-title{
+.card h2{
     font-family: Arial, sans-serif;
     margin: 0;
-    color:white;
+    color:rgb(11, 10, 10);
 }
 
-.card .card-text{
+.card p{
     font-family: Arial, sans-serif;
     color:rgb(186, 186, 48);
 }
