--- a/vite-portfolio/src/Navigation/Navigation.module.css
+++ b/vite-portfolio/src/Navigation/Navigation.module.css
@@ -5,7 +5,9 @@
     border: none;
     width: 100%;
     height: auto;
-    display: inline-block
+    display: inline-block;
+    position: sticky;
+    top: 0;
 }
 
 .Navigation l1{
@@ -19,10 +21,4 @@
     cursor:pointer;
     width: auto;
     text-align: center;
-}
-
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
 }
