--- a/vite-portfolio/src/Header/Header.module.css
+++ b/vite-portfolio/src/Header/Header.module.css
@@ -20,7 +20,10 @@
         opacity: 1;
         transform: translateY(0px) scale(1);
     }
+
 }
+
+
 
 @keyframes fade-left {
     0% {
@@ -55,5 +58,10 @@
     padding-top: 0%;
     animation: fade-left 1s;
 }
+
+.Header div {
+    animation: fade-up 1s
+}
+
 
 
