--- a/vite-portfolio/src/Navigation/Navigation.module.css
+++ b/vite-portfolio/src/Navigation/Navigation.module.css
@@ -1,6 +1,20 @@
+@keyframes fade-up {
+    0% {
+        opacity: 0;
+        transform: translateY(30px) scale(0.9);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px) scale(1);
+    }
+
+}
+
 .Navigation {
     background-color: white;
-    box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.122);
+    /* text-align:left; */
+    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.122);
     border-radius: 30px;
     border: none;
     width: 100%;
@@ -8,7 +22,9 @@
     display: inline-block;
     position: sticky;
     top: 0;
+    animation: fade-up 1s;
 }
+
 
 .Navigation l1{
     color:rgb(252, 248, 248);
@@ -16,9 +32,17 @@
     padding: 20px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.319);
-    margin: 10px;
-    margin-right: 100px;
-    cursor:pointer;
+    
+    margin-inline: 5%;
+
     width: auto;
     text-align: center;
+    cursor:pointer;
+    
+}
+
+
+.Navigation a {
+    color: white;
+    text-decoration: none;
 }
