--- a/vite-portfolio-v2/src/Components/About.css
+++ b/vite-portfolio-v2/src/Components/About.css
@@ -1,25 +1,57 @@
-/* .about {
+@keyframes fade-up {
+    0% {
+        opacity: 0;
+        transform: translateY(-30px) scale(0.9);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px) scale(1);
+    }
+}
+
+@keyframes fade-right {
+    0% {
+        opacity: 0;
+        transform: translateX(-30px) scale(0.9);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0px) scale(1);
+    }
+}
+
+.About{
+    /* background-color: rgba(38, 106, 29, 0.639); */
+    width: 100%;
+    border-radius: 10px;
+    padding:10px;
+    margin:0;
+    display:inline-block;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
-    padding: 10px;
-}
-.about .left, .about .right {
-    display: flex;
-}    */
+    animation: fade-right 3s;
 
+    
+}
 
 .about{
     border: 1px solid white(252, 252, 252, 0.188);
-    border-radius: 10px;
-    box-shadow: 0px 5px 0px 5px rgba(193, 188, 188, 0.113);
+    border-radius: 30px;
+    box-shadow: 5px 5px 5px 5px rgba(193, 188, 188, 0.113);
     padding: 20px;
     margin: 10px;
     text-align: left;
-    max-width: 60%;
-    display: inline-block
+    max-width: 50%;
+    display: inline-block;
   }
+
+
+.about .about, .about .skills {
+    display: flex;
+}
   
 .about img{
     max-width: 25%;
@@ -33,6 +65,7 @@
     font-family: Arial, sans-serif;
     margin: 0%;
     color:rgb(11, 10, 10);
+    letter-spacing: 1px;
 
 }
 
@@ -40,4 +73,43 @@
     font-family: Arial, sans-serif;
     font-size:150%;
     color:black;
+    letter-spacing: 1px;
+}
+
+
+.skills{
+    background-color: rgba(167, 219, 202, 0.176);
+    border: 1px solid white(252, 252, 252, 0.188);
+    border-radius: 30px;
+    /* box-shadow: 5px 5px 5px 5px rgba(193, 188, 188, 0.113); */
+    padding: 20px;
+    margin: 10px;
+    text-align: left;
+    max-width: auto;
+    display: inline-block
+  }
+
+
+.skills li{
+    font-family: Arial, sans-serif;
+    font-size:200%;
+    color:black;
+    padding: 30px;
+    letter-spacing: 1px;
+}
+
+.python {
+    max-width: 25%;
+    height: auto;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.cplus{
+    max-width: 10px;
+    height: auto;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    cursor: pointer;
 }
