--- a/vite-portfolio-v2/src/Components/About.css
+++ b/vite-portfolio-v2/src/Components/About.css
@@ -23,7 +23,7 @@
 }
 
 .About{
-    /* background-color: rgba(38, 106, 29, 0.639); */
+    background-color: rgba(38, 106, 29, 0.639);
     width: 100%;
     border-radius: 10px;
     padding:10px;
@@ -46,6 +46,7 @@
     text-align: left;
     max-width: 50%;
     display: inline-block;
+
   }
 
 
@@ -54,7 +55,7 @@
 }
   
 .about img{
-    max-width: 25%;
+    width: 35%;
     height: auto;
     border-radius: 50%;
     margin-bottom: 10px;
@@ -88,9 +89,9 @@
     /* box-shadow: 5px 5px 5px 5px rgba(193, 188, 188, 0.113); */
     padding: 20px;
     margin: 10px;
-    text-align: left;
     max-width: auto;
     min-width: 50%;
+    align-items: center;
 
     display: inline-block
   }
@@ -98,13 +99,15 @@
 
 .skills li{
     font-family: Arial, sans-serif;
-    font-size:200%;
+    font-size:250%;
     color:black;
     padding: 30px;
     letter-spacing: 1px;
     font-weight: 500;
     text-align: center;
     list-style: none;
+    align-items: center;
+
     
 }
 
@@ -119,13 +122,15 @@
     width: 100px;
     height: auto;
     /* border-radius: 50%; */
-    margin: 10px;
+    /* margin: 10px; */
     cursor: pointer;
+    align-items: center;
+
 }
 
 .skills p {
     font-size: 20px;
 }
-.python:hover, .cplus:hover, .sql:hover, .java:hover, .R:hover {
-    filter: drop-shadow(0 0 2em #f2400aaa);
+.python:hover, .cplus:hover, .sql:hover, .java:hover, .R:hover , .Aws:hover{
+    filter: drop-shadow(0 0 2em #c20606c5);
   }
