--- a/vite-portfolio-v2/src/Components/About.css
+++ b/vite-portfolio-v2/src/Components/About.css
@@ -32,7 +32,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    animation: fade-right 3s;
+    /* animation: fade-right 3s; */
 
     
 }
