--- a/vite-portfolio-v2/src/Components/Navbar.css
+++ b/vite-portfolio-v2/src/Components/Navbar.css
@@ -10,6 +10,7 @@
     }
 }
 
+
 .navbar{
     background-color: white;
     width: 100%;
@@ -22,10 +23,10 @@
     align-items: center;
     animation: fade-up 2s;
     box-shadow: 0px 10px 0px 0px rgba(0, 0, 0, 0.034);
-    
 
     position: sticky;
-    top: 0px;
+    top: 0;
+    
 }
 
 .navbar .left, .navbar .right {
@@ -79,4 +80,5 @@
     width: 30px;
     height: auto;
     cursor: pointer;
+
 }
