--- a/vite-portfolio-v2/src/Components/Experience.css
+++ b/vite-portfolio-v2/src/Components/Experience.css
@@ -4,24 +4,27 @@
     font-size: 20px;
 }
 .experience {
-    background-color: aqua;
+    /* background-color: aqua; */
     display:flex;
     overflow-x: auto;
     width: 100%;
     letter-spacing: 1px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular';
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .experience ul{
     border-radius: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: white;
     border: 1px solid;
     margin: 30px;
     padding: 30px;
     min-width:35%;
-    font-size: 40px;
+    font-size: 20px;
     text-align: left;
     font-weight: bold;
+    border: none;
+    box-shadow: 5px 5px 5px 5px rgba(193, 188, 188, 0.113);
+
 }
 
 .experience p{
@@ -29,17 +32,18 @@
     padding: 0;
     padding-top: 10px;
     padding-bottom: 15px;
-    font-size:20px;
+    font-size:15px;
     display: flex;
+    font-weight: 500;
 }
 
 .experience li{
     text-align: left;
     margin-left: 50px;
     margin-right: 30px;
-    font-size: 30px;
+    font-size: 20px;
     padding-bottom: 10px;
-    font-weight:100;
+    font-weight:400;
 
 }
 
@@ -47,4 +51,8 @@
     text-decoration: none;
     color: black;
     font-weight: bold;
+}
+
+.experience a:hover{
+    filter: drop-shadow(0 0 .5em rgb(54, 215, 193));
 }
