--- a/vite-portfolio-v2/src/Components/Header.css
+++ b/vite-portfolio-v2/src/Components/Header.css
@@ -36,7 +36,7 @@
 
 .intro {
     color:red;
-    background-color:hsla(0, 4%, 39%, 0.429);
+    /* background-color:hsla(0, 4%, 39%, 0.429); */
     margin: 10px;
     padding: 0% 0% 1% 0%;
     width: 100%;
@@ -62,6 +62,7 @@
     margin-top: 0%;
     margin-bottom:0%;
     padding: 1%;
+    letter-spacing: 2px;
 
     animation: fade-up 1.5s;
 }
