--- a/vite-portfolio-v2/src/Components/Experience.css
+++ b/vite-portfolio-v2/src/Components/Experience.css
@@ -1,20 +1,29 @@
 
 
-.title {
-    font-size: 20px;
+.exp-title {
+    font-size: 60px;
+    background-color:white;
+    /* padding-bottom:30px; */
+    margin: 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    letter-spacing: 2px;
+    font-weight: 600;
+
 }
-.experience {
-    /* background-color: aqua; */
+.experiences {
     display:flex;
     overflow-x: auto;
     width: 100%;
     letter-spacing: 1px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.experience ul{
+.experiences ul{
+    background-color: rgba(0, 255, 255, 0.096);
+    border-radius: 15px;
+    margin:10px;
+
     border-radius: 20px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: white;
     border: 1px solid;
     margin: 30px;
     padding: 30px;
@@ -27,7 +36,7 @@
 
 }
 
-.experience p{
+.experiences p{
     margin: 0;
     padding: 0;
     padding-top: 10px;
@@ -37,7 +46,7 @@
     font-weight: 500;
 }
 
-.experience li{
+.experiences li{
     text-align: left;
     margin-left: 50px;
     margin-right: 30px;
@@ -47,12 +56,12 @@
 
 }
 
-.experience a{
+.experiences a{
     text-decoration: none;
     color: black;
     font-weight: bold;
 }
 
-.experience a:hover{
+.experiences a:hover{
     filter: drop-shadow(0 0 .5em rgb(54, 215, 193));
 }
