--- a/vite-portfolio-v2/src/Components/Projects.css
+++ b/vite-portfolio-v2/src/Components/Projects.css
@@ -1,10 +1,20 @@
-.projects{
+.pro-title {
+    font-size: 60px;
+    background-color:white;
+    /* padding-bottom:30px; */
+    margin: 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    letter-spacing: 2px;
+    font-weight: 600;
+
+}
+
+.project{
     /* background-color: beige; */
     width: 100%;
     border-radius: 10px;
     padding:10px;
     margin:0;
-    display:inline-block;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -15,7 +25,7 @@
     margin: 10px;
     text-align: left;
     width: 50%;
-    display: inline-block;
+    /* display: inline-block; */
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: aliceblue;
     border-radius: 15px;
