--- a/vite-portfolio-v2/src/App.css
+++ b/vite-portfolio-v2/src/App.css
@@ -41,7 +41,30 @@
 .read-the-docs {
   color: #888;
 } */
-.footer h1{
+
+.footer {
+  font-size: 50px;
+  margin:100px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  letter-spacing: 2px;
+  padding-bottom: 10px;
+
+}
+
+.thanks {
   font-size: 100px;
-  margin:100px
+  margin:100px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  letter-spacing: 2px;
+  padding-bottom: 500px;
+  display:flex;
+  
+}
+
+.thanks p{
+  font-size: 100px;
+  width: 50%;
+  padding: 0px;
+  /* background-color: antiquewhite; */
+  margin-right: 0;
 }
